replace jgit clone with command line; and other modification for linux